crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task__run_in_ci__runs_dependents_if_both_are_ci_true.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupToolchain(system)" ]
    2 [ label="SyncProject(system, ci)" ]
    3 [ label="RunTask(ci:ci4-dependency)" ]
    4 [ label="RunTask(ci:ci4-dependent)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 2 [ ]
    4 -> 2 [ ]
    4 -> 3 [ ]
}
